improved multi-branch staging logic

--- a/covid19_county_level_EDA.ipynb
+++ b/covid19_county_level_EDA.ipynb
@@ -79,28 +79,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done downloading.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "426c35de30324157b1e2f630ceaf29ca",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=3191.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "No update to case data source, loading core case data from cache\n"
      ]
     }
    ],
@@ -115,24 +94,10 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90f211e1e7394bc78c12b75b5cc8b66c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=2660.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "No update to core case data, loaded Rt estimates from cache\n"
      ]
     }
    ],
@@ -154,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
