switch from usafacts to JHU source and associated pipeline fixes

--- a/covid19_county_level_EDA.ipynb
+++ b/covid19_county_level_EDA.ipynb
@@ -77,18 +77,7 @@
    "outputs": [],
    "source": [
     "# Build/Update Core Case Data\n",
-    "usafacts_delta_df, updated = build_latest_case_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: fix data-related bug in Rt calc for two counties\n",
-    "test_facts = df_subr[df_subr.index.get_level_values('name').isin(['Oakland County, MI', 'Anderson County, TX'])]\n",
-    "test_facts"
+    "covid_delta_df, updated = build_latest_case_data()"
    ]
   },
   {
@@ -99,7 +88,7 @@
    "source": [
     "# Update Effective R Estimates\n",
     "# Bayesian Rt Estimation\n",
-    "rt_df = bayes_rt.gen_rt_df(usafacts_delta_df)"
+    "rt_df = bayes_rt.gen_rt_df(covid_delta_df)"
    ]
   },
   {
